update pod yaml file

--- a/yolo-pod.yaml
+++ b/yolo-pod.yaml
@@ -20,6 +20,10 @@ spec:
   - name: dshm
     emptyDir:
       medium: Memory
+  - name: code
+    persistentVolumeClaim:
+      claimName: code-vol
+
   containers:
   - name: gpu-container
     image: gitlab-registry.nrp-nautilus.io/yg5d6/yolov8
@@ -32,7 +36,7 @@ spec:
       cp /etc/ssh-key/ssh-privatekey /root/.ssh/id_ed25519;
       wandb login a9d4d981ca28ba6b6729e2a29464674ca243b891;
       git config --global user.name  "Yixiang Gao";
-      git config --global user.email "yg5d6@umsystem.edu";
+      git config --global user.email "yg5d6@mail.missouri.edu";
       sleep infinity;
     resources:
       limits:
@@ -49,3 +53,5 @@ spec:
       mountPath: /etc/ssh-key
     - name: dshm
       mountPath: /dev/shm
+    - name: code
+      mountPath: /workspace/code
