--- a/Dockerfile.intern
+++ b/Dockerfile.intern
@@ -1,11 +1,17 @@
-FROM --platform=linux/amd64 pytorch/pytorch:2.0.1-cuda11.7-cudnn8-devel
+FROM --platform=linux/amd64 pytorch/pytorch:1.11.0-cuda11.3-cudnn8-devel
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -y && \
+    apt-get install -y tmux && \
     apt-get install -y ssh && \ 
     apt-get install -y vim  && \
     apt-get install -y git  && \
+    apt-get install ffmpeg libsm6 libxext6 -y && \
     apt-get -y install python3-pip && \
-    pip install wandb
+    pip install wandb && \
+    pip install -U openmim && \
+    mim install mmcv-full==1.5.0 && \
+    pip install timm==0.6.11 mmdet==2.28.1 && \
+    pip install opencv-python termcolor yacs pyyaml scipy
 
-COPY datasets/Fisheye8K_all_including_train.tar.gz /workspace/FishEye8k/
+COPY datasets/Fisheye8K_all_including_train.tar.gz /workspace/FishEye8k
