update yaml files for nautilus

--- a/Dockerfile.intern
+++ b/Dockerfile.intern
@@ -10,6 +10,8 @@ RUN apt-get update -y && \
     apt-get -y install python3-pip && \
     pip install wandb && \
     pip install ultralytics && \
+    pip install notebook && \
+    pip install ipywidgets && \
     pip install torch==1.11.0+cu113 torchvision==0.12.0+cu113  -f https://download.pytorch.org/whl/torch_stable.html && \
     pip install -U openmim && \
     mim install mmcv-full==1.5.0 && \
