--- a/pvc.yaml
+++ b/pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: code-vol
+  name: fisheye-challenge
 spec:
   storageClassName: rook-cephfs-central
   accessModes:
   - ReadWriteMany
   resources:
     requests:
-      storage: 5Gi
+      storage: 20Gi
