--- a/yolo-pod.yaml
+++ b/yolo-pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata: 
-  name: yolo-pod
+  name: yolo-pod-3090
 spec:
   affinity:
     nodeAffinity:
@@ -11,11 +11,11 @@ spec:
           - key: nvidia.com/gpu.product
             operator: In
             values:
-            - NVIDIA-A100-SXM4-80GB
-            - NVIDIA-RTX-A6000
-            - NVIDIA-RTX-A5000
-            - NVIDIA-A40
-            - NVIDIA-A10
+            #- NVIDIA-A100-SXM4-80GB
+            #- NVIDIA-RTX-A6000
+            #- NVIDIA-RTX-A5000
+            #- NVIDIA-A40
+            #- NVIDIA-A10
             - NVIDIA-GeForce-RTX-3090
   volumes:
   - name: git-secret
@@ -53,11 +53,11 @@ spec:
       limits:
         memory: "32G"
         cpu: "8"
-        nvidia.com/gpu: "2"
+        nvidia.com/gpu: "1"
       requests:
         memory: "32G"
         cpu: "8"
-        nvidia.com/gpu: "2"
+        nvidia.com/gpu: "1"
     volumeMounts:
     - name: git-secret
       readOnly: true
