--- a/Dockerfile.yolo
+++ b/Dockerfile.yolo
@@ -4,7 +4,9 @@ RUN apt-get update && \
     apt-get install -y ssh && \ 
     apt-get install -y vim  && \
     apt-get install -y git  && \
+    apt-get install -y tmux && \
     apt-get -y install python3-pip && \
-    pip install wandb
+    pip install wandb && \
+    pip install cython
 
 COPY datasets/Fisheye8K_all_including_train.tar.gz /workspace/FishEye8k/
